<resources>
    <string name="app_name">길재의 메모장</string>
    <string name="title_addmemo">메모 추가</string>
    <string name="title_viewmemo">메모 확인</string>
    <string name="title_editmemo">메모 편집</string>
    <string name="title_setting">설정</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="save">저장하기</string>
    <string name="edit">Edit</string>

    <string name="correct_password1">비밀번호를 4자 이상 입력해주세요.</string>
    <string name="correct_password2">비밀번호가 서로 다릅니다.\n다시 입력해주세요.</string>
    <string name="correct_password3">잘 못된 비밀번호입니다.\n다시 입력해주세요.</string>

    <string name="enc_input_dialog_message">"메모를 암호화할 비밀번호를 입력해주세요.\n\n입력한 비밀번호는 저장 또는 전송되지 않으므로\n\비밀번호 분실 시 암호화된 메모를 확인할 수 없습니다.\비밀번호를 꼭 기억해 주세요.\n\n사용자가 작성한 모든 메모는 기본적으로 암호화되어 저장됩니다.\n</string>
    <string name="enc_change_dialog_message">"현재 비밀번호와 변경할 비밀번호를 입력해주세요.\n\n비밀번호 분실 시 암호화된 메모를 확인할 수 없습니다.\비밀번호를 꼭 기억해 주세요.\n\n비밀번호 변경 시 모든 메모는 재암호화 됩니다.\n</string>
    <string name="enc_key_hint">비밀번호 입력 (4 ~ 16)</string>
    <string name="enc_key_hint_re">비밀번호 재입력 (4 ~ 16)</string>

    <string name="current_enc_key_hint">현재 비밀번호 입력 (4 ~ 16)</string>
    <string name="new_enc_key_hint">새로운 비밀번호 입력 (4 ~ 16)</string>
    <string name="new_enc_key_hint_re">새로운 비밀번호 재입력 (4 ~ 16)</string>

    <string name="empty_memo">등록된 메모가 없습니다.</string>

    <string name="this_memo_lock_save">이 메모는 암호화되어 저장됩니다.</string>
    <string name="this_memo_unlock_save">이 메모는 암호화되지 않습니다.</string>

    <string name="enter_a_hint">이 메모를 기억할 수 있도록 힌트를 입력해주세요.</string>
    <string name="hint_add_hint">힌트를 입력해주세요.</string>
    <string name="hint_add_data">이 메모의 내용을 입력해주세요.</string>
    <string name="empty_hint">힌트 없음</string>

    <string name="empty_data_plz_enter_a_data">입력된 내용이 없습니다. 내용을 입력해주세요.</string>
    <string name="save_memo">메모가 저장되었습니다.</string>
    <string name="remove_memo">메모가 영구적으로 삭제 되었습니다.</string>
    <string name="update_memo">메모 정보를 수정하였습니다.</string>

    <string name="enter_the_password">비밀번호를 입력해주세요.</string>
    <string name="enter_remove_password">메모를 삭제하면 복구 할 수 없습니다.\n\n비밀번호를 입력해주세요.</string>

    <string name="password_holding_time">사용자가 입력한 비밀번호을 잠깐 동안 기억합니다.</string>
    <string name="password_fail_penalty">비밀번호 입력 실패 시 제약 조건</string>
    <string name="password_fail_lock">비밀번호 입력 실패 시 완전 잠김 조건</string>
    <string name="warring">"* 경고 *"</string>
    <string name="forever_lock_warring">완전 잠김 조건을 설정하는 경우,\n비밀번호 분실 시 잠금된 메모장을 열 수 없습니다.</string>
    <string name="change_password">비밀번호 변경하기</string>
    <string name="succssed_change_password">비밀번호를 변경하였습니다.</string>

    <string name="secure_exception_rooting">루팅된 폰입니다. 앱을 종료합니다.</string>
    <string name="secure_exception_debugging">디버깅이 감지되었습니다.\n앱을 종료합니다.</string>
    <string name="secure_exception_crack">위변조된 앱 입니다.\n앱을 종료합니다.</string>

    <string name="infinity_locked">앱이 영구적으로 잠겼습니다.\n암호화된 메모의 복원이 불가능합니다.</string>

    <string name="remain_infinity_lock_count">영구적으로 잠기기까지 %d회 남았습니다.</string>
    <string name="remain_time">잠김! %d초 남음.</string>

    <string name="app_version">* 길재의 메모장 Version</string>

</resources>