<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="vmSetting"
            type="com.studiolkj.myencnote.viewModel.SettingViewModel"/>
        <import
            alias="util"
            type="com.studiolkj.myencnote.common.Utils"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clTitle"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@color/colorOatmeal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBack"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:padding="7dp"
                android:src="@drawable/ic_back"
                android:onClick="@{vmSetting::onBack}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlackCherry"
                android:textSize="@dimen/dialog_title"
                android:textStyle="bold"
                android:text="@string/title_setting"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivBack"
                tools:text="TITLE"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHoldingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_holding_time"
            android:textColor="@color/colorBlackCherry"
            android:textSize="@dimen/dialog_title"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/clTitle"
            app:layout_constraintStart_toStartOf="parent"/>
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spHoldingTime"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:paddingStart="10dp"
            android:textColor="@color/colorDarkGray"
            android:textSize="@dimen/dialog_title"
            android:entries="@array/holding_times"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:selectedItemPosition="@{vmSetting.holdingTime}"
            android:onItemSelected="@{(parent,view,pos,id)->vmSetting.onSelectHoldingTime(pos)}"
            app:layout_constraintTop_toBottomOf="@+id/tvHoldingTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRetryType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_fail_penalty"
            android:textColor="@color/colorBlackCherry"
            android:textSize="@dimen/dialog_title"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/spHoldingTime"
            app:layout_constraintStart_toStartOf="parent"/>
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spRetryType"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:paddingStart="10dp"
            android:textColor="@color/colorDarkGray"
            android:textSize="@dimen/dialog_title"
            android:entries="@array/retry_types"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:selectedItemPosition="@{vmSetting.retryType}"
            android:onItemSelected="@{(parent,view,pos,id)->vmSetting.onSelectRetryType(pos)}"
            app:layout_constraintTop_toBottomOf="@+id/tvRetryType"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLockType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_fail_lock"
            android:textColor="@color/colorBlackCherry"
            android:textSize="@dimen/dialog_title"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/spRetryType"
            app:layout_constraintStart_toStartOf="parent"/>
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spLockType"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:paddingStart="10dp"
            android:textColor="@color/colorDarkGray"
            android:textSize="@dimen/dialog_title"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:entries="@array/lock_types"
            android:selectedItemPosition="@{vmSetting.lockType}"
            android:onItemSelected="@{(parent,view,pos,id)->vmSetting.onSelectLockType(pos)}"
            app:layout_constraintTop_toBottomOf="@+id/tvLockType"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWarringTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warring"
            android:textColor="@color/colorOrangeRed"
            android:textSize="@dimen/dialog_title"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/spLockType"
            app:layout_constraintStart_toStartOf="parent"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWarringMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forever_lock_warring"
            android:textColor="@color/colorOrangeRed"
            android:textSize="@dimen/dialog_title"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tvWarringTitle"
            app:layout_constraintStart_toStartOf="parent"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id='@+id/btnChangePassword'
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:textSize="@dimen/dialog_title"
            android:background="@color/colorTransparent"
            android:textColor="@color/colorBlackCherry"
            android:text="@string/change_password"
            android:layout_marginTop="30dp"
            android:stateListAnimator="@null"
            android:onClick="@{vmSetting::onClickChangePassword}"
            app:layout_constraintTop_toBottomOf="@+id/tvWarringMessage"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>