<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="vmEditMemo"
            type="com.studiolkj.myencnote.viewModel.EditMemoViewModel"/>
        <import
            alias="util"
            type="com.studiolkj.myencnote.common.Utils"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clTitle"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@color/colorOatmeal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBack"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:padding="7dp"
                android:src="@drawable/ic_back"
                android:onClick="@{vmEditMemo::onBack}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlackCherry"
                android:textSize="@dimen/dialog_title"
                android:textStyle="bold"
                android:text="@string/title_editmemo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivBack"
                tools:text="TITLE"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivRemove"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:padding="10dp"
                android:src="@drawable/ic_remove"
                android:onClick="@{vmEditMemo::onClickRemove}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLock"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            encDrawable="@{vmEditMemo.hasEnc}"
            android:onClick="@{vmEditMemo::onClickEnc}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clTitle"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{util.getLockString(vmEditMemo.hasEnc)}"
            android:textColor="@color/colorBlackCherry"
            android:textSize="@dimen/dialog_title"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@+id/ivLock"
            app:layout_constraintBottom_toBottomOf="@+id/ivLock"
            app:layout_constraintStart_toEndOf="@+id/ivLock"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_a_hint"
            android:textColor="@color/colorBlackCherry"
            android:textSize="@dimen/dialog_title"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/ivLock"
            app:layout_constraintStart_toStartOf="parent"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etHint"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:paddingStart="10dp"
            android:text="@={vmEditMemo.hintString}"
            android:background="@drawable/bg_round10_black_frame"
            android:textColor="@color/colorDarkGray"
            android:textSize="@dimen/dialog_title"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:hint="@string/hint_add_hint"
            android:maxLength="64"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@+id/tvHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etData"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="10dp"
            android:text="@={vmEditMemo.dataString}"
            android:textColor="@color/colorDarkGray"
            android:textSize="@dimen/dialog_title"
            android:background="@drawable/bg_round10_black_frame"
            android:layout_margin="20dp"
            android:hint="@string/hint_add_data"
            android:gravity="start|top"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@+id/etHint"
            app:layout_constraintBottom_toTopOf="@+id/btnUpdate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id='@+id/btnUpdate'
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:textSize="@dimen/dialog_title"
            android:background="@color/colorOrange"
            android:textColor="@color/colorWhite"
            android:text="@string/save"
            android:stateListAnimator="@null"
            android:onClick="@{vmEditMemo::onClickUpdate}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>